--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -5,7 +5,7 @@
         "allowJs": false,
         "outDir": "./dist/",
         "sourceMap": true,
-        "module": "commonjs",
+        "module": "es6",
         "moduleResolution": "node",
         "jsx": "react",
         "target": "es5",
